Updated to git-tfs v12.1

--- a/Tools/notepadplusplus/Data/settings/plugins/config/PluginManager.ini
+++ b/Tools/notepadplusplus/Data/settings/plugins/config/PluginManager.ini
@@ -1,6 +1,8 @@
 [Settings]
-LastCheck=1325025355
+LastCheck=1328889823
 ProxyPort=0
 Proxy=
 NotifyUpdates=1
 ShowUnstable=0
+InstallLocation=2
+ProxyUsername=
